# calcium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
include/: binary_tree.h  csp23_jr1.h  dynamic_program.h  static_const.h
junior/: static_const.cpp
src/: CmakeLists.txt  binary_tree.cpp  main.cpp
src/common/: CMakeLists.txt  dynamic_program.cpp  dynamic_program.h  my_sqrt.cpp  my_tools.cpp  my_tools.h
src/junior/: CMakeLists.txt  binary_tree.cpp  csp23_jr1.cpp  csp23_jr1.h  csp23_jr1.ipynb  read_23r1.cpp  read_23r1.h  static_const.cpp
tests/: CMakeLists.txt  test_csp23_jr1.cpp
